--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.23.12",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
+    "jspdf-font": "^1.0.7",
     "lucide-react": "^0.511.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
