--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "crons": [{
+    "path": "/api/cron",
+    "schedule": "0 0 * * 1,4"
+  }]
 }
